--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha index.spec.js"
+    "test": "NODE_ENV=test mocha api/user/user.spec.js",
+    "start": "node bin/www.js"
   },
   "author": "",
   "license": "ISC",
